--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,57 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <title>jInstagram - Realtime Demo</title>
 
-    <meta charset="UTF-8">
-    <title>Simple Reverse Echo WebSocket Example</title>
+    <style type="text/css">
+        .instagram {
+            overflow: hidden;
+            width: 775px;
+            margin: 0 auto;
+        }
 
-     <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
+        .instagram-placeholder {
+            float: left;
+            margin-right: 5px;
         }
     </style>
 
 </head>
 
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse"
-                    data-target=".nav-collapse">
-                <span class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
-            </button>
-            <a class="brand" href="#">Reverse Echo</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active"><a href="#">Home</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div id="main" class="container">
-    <div class="row">
-        <div class="span6">
-            <h2>Write your message</h2>
-            <textarea rows="3" cols="10" id="inputMessage"></textarea>
-            <button type="submit" class="btn btn-success" id="messageSubmit">Send</button>
-        </div>
-        <div class="span6">
-            <h2>Reverse Message</h2>
-            <textarea rows="3" cols="10" id="outputMessage"></textarea>
-        </div>
-    </div>
-</div>
+<h1>jInstagram - Realtime demo</h1>
+<p>Realtime feed for photos which are tagged with <strong>#jinstagram</strong></p>
+<br/>
+<br/>
+<div class="instagram" />
 
-
-<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
- <script type="text/javascript" src="js/app.js">
-</script>
 </body>
 
+<!-- jQuery Libraries -->
+<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-instagram/0.3.1/instagram.min.js"></script>
+<script src="js/app.js"></script>
 </html>
